new feature that will use account (imap, gmail,outlook) for email authenticate and load email on our platform and serve by email, its almost similar to email client
